maze.lessons.maze.island.IslandMaze.scala.error
Escaper:20: error: ';' expected but 'else' found.
  }else{
   ^Escaper:38: error: expected class or object definition
def freeDirection(dir:Direction):Boolean=
^Escaper:52: error: Unmatched closing brace '}' ignored here
}
^