maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while(!estSurBiscuit())
  {
    keepHandOnSideWall()
  }
  prendBiscuit()
}

def keepHandOnSideWall()
{
  if(getDirection()==Direction.NORD && !estFaceMur() )
  {
    
    avance()
    if(estFaceMur())
    	droite() 
    
  }
  }else{
    
    gauche()
    
  	if(estFaceMur())
  	{
    	 droite()
  	}
  	if(!estFaceMur())
  	{
    	avance()
  	}else
    {
    	droite();
  	}
  }  
}

def freeDirection(dir:Direction):Boolean=
{
  var d=getDirection();
  setDirection(dir)
  
  if(!estFaceMur())return true
  else
  {
    setDirection(d)
    return false
  }
}